[Chore] 불필요 주석 제거 및 String format 방식 통일